# numbeo-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  stale.yml
.github/workflows/: CI.yml  build.yml  testing.yml
examples/: main.py
src/numbeo_mcp/: __init__.py  client.py  schemas.py  server.py
src/numbeo_sdk/: __init__.py  client.py  modeling.py
tests/: test_integration.py  test_mcp_server.py  test_numbeo.py  test_sdk.py
