[project]
# https://docs.astral.sh/uv/concepts/projects/config/
name = "numbeo-mcp"
version = "0.1.0"
description = "FastMCP server wrapping the Numbeo API for cost of living, property prices and crime rates data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Federico Minutoli", email = "fede97.minutoli@gmail.com" }
]
dependencies = [
    "requests>=2.32.3,<3.0.0",
    "fastmcp>=2.13.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "ruff>=0.8.4,<1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numbeo_sdk", "src/numbeo_mcp"]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py312"


[project.scripts]
# Start the Numbeo MCP server
numbeo-mcp = "numbeo_mcp:main"
