[project]
# https://docs.astral.sh/uv/concepts/projects/config/
name = "numbeo-mcp"
version = "0.1.0"
description = "FastMCP server wrapping the Numbeo API, providing data on cost of living, property prices, and crime rates."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Federico Minutoli", email = "fede97.minutoli@gmail.com" }
]
dependencies = [
  "fastmcp>2,<3",
  "pydantic>2,<3"
]

[dependency-groups]
dev = [
  "pytest<9",
  "pytest-asyncio<2",
  "ruff<1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numbeo_sdk", "src/numbeo_mcp"]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py312"
