[project]
# https://docs.astral.sh/uv/concepts/projects/config/
name = "numbeo-mcp"
version = "0.1.0"
description = "FastMCP server wrapping the Numbeo API, providing data on cost of living, property prices, and crime rates."
readme = "README.md"
authors = [
  { name = "Federico Minutoli", email = "fede97.minutoli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "fastmcp>2,<3",
  "numbeo-sdk"
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>0.9,<0.10"]

[dependency-groups]
dev = [
  "pytest<10",
  "pytest-asyncio<2",
  "ruff<1"
]

[tool.uv.sources]
numbeo-sdk = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
target-version = "py312"
